--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BD_CNN=mongodb+srv://alber:holamundo@micluster.k2peccm.mongodb.net/
+BD_CNN=mongodb+srv://alber:holamundo3@clusterpet.bkqonew.mongodb.net/
 PORT=4000
 SECRET_JWT_SEED=clave-secreta-para-generar-token
